libs/config/tests/errors/ce1_invalid_value/stdout.ansi
[31m[CE1] Error:[0m property's value could not be parsed.
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:2:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249mo[0m[38;5;249mu[0m[38;5;249mt[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;201ms[0m[38;5;201mo[0m[38;5;201mm[0m[38;5;201me[0m[38;5;201mt[0m[38;5;201mh[0m[38;5;201mi[0m[38;5;201mn[0m[38;5;201mg[0m[38;5;249m;[0m
 [38;5;240m  │[0m             [38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m  
 [38;5;240m  │[0m                 [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m invalid value
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: use quotes `"` around the value, or a QUOTE macro if it contains #define values
[38;5;246m───╯[0m
